--- a/public/admin.html
+++ b/public/admin.html
@@ -8,9 +8,25 @@
 </head>
 
 <body>
-   <div id="root">
-       
-   </div>
+   <div id="root" class="container">
+        <h1>Add Books</h1>
+        
+        <label class="form-label" for="add-title">Title</label>
+        <input class="form-control" id="add-title" type="text" name="title">
+
+        <label class="form-label" for="add-year">Year</label>
+        <input class="form-control" id="add-year" type="text" name="year">
+
+        <label class="form-label" for="add-description">Description</label>
+        <input class="form-control" id="add-description" type="text" name="description">
+
+        <label class="form-label" for="add-quantity">Quantity</label>
+        <input class="form-control" id="add-quantity" type="number" name="quantity">
+
+        <label class="form-label" for="add-imageURL">ImageURL</label>
+        <input class="form-control" id="add-imageURL" type="text" name="imageURL">
+        <button id ="add-book">Add Book</button>
+    </div>
     <!-- Our JavaScript Code  -->
     <script src="admin.js"></script>
 </body>
